# mpm-opencl

./: CMakeLists.txt  README.md  tutorial.cpp
cmake/: FindOpenCL.cmake
configparser/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Tokenizer.cpp  Tokenizer.hpp
doc/: makefile  memory-layout.tex  overview.tex  quad-2d-element.tex  references.bib  structured-grid-numbering.tex  tri-2d-element.tex
mshutils/: CMakeLists.txt  Graph.hpp  Msh.cpp  Msh.hpp
py/: CMakeLists.txt  example.geo  example.msh  msh.py  process_msh.py  view_msh.py  view_mt2.py
sim/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.hpp  MPMKernels.cl  MasterElement.hpp  MaterialPoint.hpp  Mesh.hpp  Simulate.cpp  Simulation.cpp  Simulation.hpp  Tensor.hpp  Timer.hpp  Writer.hpp  clerror.hpp  gzstream.hpp  particles.csv  rotation.cl  tutorial.cpp
tests/: CMakeLists.txt  ConfigurationTest.cpp  GraphTest.cpp  MPMMeshTest.cpp  MasterElementTest.cpp  MshTest.cpp  SpatialBinningTest.cpp  TensorTest.cpp  TestUtils.hpp  TriangleTest.cpp  test.cfg  test.cpp
